--- a/index.html
+++ b/index.html
@@ -1,11 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>dior</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400,700&family=Playfair+Display&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+    <script src="js/main.js" defer></script>
 </head>
+
 <body>
-    
+
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a class="logo" href="#">
+                    <img src="images/logo.svg" alt="logo">
+                </a>
+                <h3 class="header__title">
+                    LA COLLECTION PRIVÉE CHRISTIAN DIOR
+                </h3>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__item"><a class="menu__link" href="#">WOMEN'S FRAGRANCE</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#">MEN'S FRAGRANCE</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#">MAKEUP</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#">SKINCARE</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#">DIOR SPA</a></li>
+                    </ul>
+                </nav>
+                <ul class="user-nav">
+                    <li class="user-nav__item">
+                        <a class="user-nav__link" href="#">
+                            <img src="images/favorits.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="user-nav__item">
+                        <a class="user-nav__link" href="#">
+                            <img src="images/cart.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <section class="top">
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="top-slide">
+                        <div class="container">
+                            <div class="top-slide__inner">
+                                <img src="images/slider-top/slide1.jpg" alt="slide1">
+                                <div class="top-slide__content">
+                                    <h1 class="top-slide__title">
+                                        GRIS DIOR
+                                    </h1>
+                                    <p class="top-slide__subtitle">
+                                        Fragrance
+                                    </p>
+                                    <p class="top-slide__text">
+                                        With Gris Dior you dare to reveal your most surprising, mysterious and
+                                        unexpected facets.
+                                    </p>
+                                    <a class="top-slide__btn" href="#">
+                                        DISCOVER
+                                    </a>
+                                </div>
+                                <img src="images/slider-top/slide2.jpg" alt="slide1">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="top-slide" style="background-image: url(images/slider-top/slide-background1.jpg);">
+                        <div class="container">
+                            <div class="top-slide__inner">
+                                <a class="top-slide__btn" href="#">
+                                    YOUR NEW EXPERIENCE
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="top-slide" style="background-image: url(images/slider-top/slide.background2.jpg);">
+                        <div class="container">
+                            <div class="top-slide__inner">
+                                <a class="top-slide__btn" href="#">
+                                    YOUR NEW EXPERIENCE
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container container-arrow">
+                <div class="swiper-button-prev">
+                    <img src="images/arrow-left.svg" alt="">
+                </div>
+                <div class="swiper-button-next">
+                    <img src="images/arrow-right.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
