--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
 
     <section class="top">
-        <div class="swiper">
+        <div class="top__slider swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="top-slide">
@@ -71,7 +71,7 @@
                                         With Gris Dior you dare to reveal your most surprising, mysterious and
                                         unexpected facets.
                                     </p>
-                                    <a class="top-slide__btn" href="#">
+                                    <a class="top-slide__btn button" href="#">
                                         DISCOVER
                                     </a>
                                 </div>
@@ -84,7 +84,7 @@
                     <div class="top-slide" style="background-image: url(images/slider-top/slide-background1.jpg);">
                         <div class="container">
                             <div class="top-slide__inner">
-                                <a class="top-slide__btn" href="#">
+                                <a class="top-slide__btn button" href="#">
                                     YOUR NEW EXPERIENCE
                                 </a>
                             </div>
@@ -95,7 +95,7 @@
                     <div class="top-slide" style="background-image: url(images/slider-top/slide.background2.jpg);">
                         <div class="container">
                             <div class="top-slide__inner">
-                                <a class="top-slide__btn" href="#">
+                                <a class="top-slide__btn button" href="#">
                                     YOUR NEW EXPERIENCE
                                 </a>
                             </div>
@@ -110,6 +110,114 @@
                 <div class="swiper-button-next">
                     <img src="images/arrow-right.svg" alt="">
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="container">
+            <div class="about__inner">
+                <h2 class="about__title">
+                    DARE IN GRIS DIOR
+                </h2>
+                <div class="about__textbox">
+                    <div class="about__text">
+                        <p>
+                            Gris Dior is the olfactory expression of gray, the iconic color of the House of Dior that
+                            embodies the bold spirit of Christian Dior.
+
+                        </p>
+                        <p>
+                            A unisex eau de parfum that defies gender, Gris Dior is an intense chypre fragrance that
+                            makes a strong, recognizable statement, a fragrance you adopt and interpret to suit your own
+                            rules.
+
+                        </p>
+                        <p>
+                            Gris Dior uninhibitedly combines heritage with a modern twist and plays the unisex card with
+                            confidence. It is multifaceted and not as obvious as it seems, like the color gray, richly
+                            nuanced with its subtleties, anything but a simple mix of black and white.
+                        </p>
+                    </div>
+                    <div class="about__text about__text--bold">
+                        <p>
+                            A backdrop for all desires, revealing all shades: dare to go gray with Gris Dior.
+                            A bold embodiment of this elusive color, Gris Dior is a light chypre fragrance that has
+                            become an icon, an unexpected master of the game. Both a fragrance for women and a fragrance
+                            for men, its unisex trail invites uninhibited expression today.
+                        </p>
+                        <p>
+                            A backdrop for all desires, revealing all shades: dare to go gray with Gris Dior.
+                            A bold embodiment of this elusive color, Gris Dior is a light chypre fragrance that has
+                            become an icon, an unexpected master of the game. Both a fragrance for women and a fragrance
+                            for men, its unisex trail invites uninhibited expression today.
+                        </p>
+                    </div>
+                </div>
+                <div class="about__slider swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                           <div class="about__item">
+                            <h4 class="about__item-title">
+                                DISCOVER GRIS DIOR
+                            </h4>
+                            <img src="images/slider-about/slide1.jpg" alt="">
+                           </div> 
+                        </div>
+                        <div class="swiper-slide">
+                           <div class="about__item">
+                            <h4 class="about__item-title">
+                                DARE TO RISK IT
+                            </h4>
+                            <img src="images/slider-about/slide2.jpg" alt="">
+                           </div> 
+                        </div>
+                        <div class="swiper-slide">
+                           <div class="about__item">
+                            <h4 class="about__item-title">
+                                FEEL THE FLAVOUR
+                            </h4>
+                            <img src="images/slider-about/slide3.jpg" alt="">
+                           </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="about__item">
+                             <h4 class="about__item-title">
+                                 DISCOVER GRIS DIOR
+                             </h4>
+                             <img src="images/slider-about/slide1.jpg" alt="">
+                            </div> 
+                         </div>
+                         <div class="swiper-slide">
+                            <div class="about__item">
+                             <h4 class="about__item-title">
+                                 DARE TO RISK IT
+                             </h4>
+                             <img src="images/slider-about/slide2.jpg" alt="">
+                            </div> 
+                         </div>
+                         <div class="swiper-slide">
+                            <div class="about__item">
+                             <h4 class="about__item-title">
+                                 FEEL THE FLAVOUR
+                             </h4>
+                             <img src="images/slider-about/slide3.jpg" alt="">
+                            </div> 
+                         </div>
+                    </div>
+                    <div class="container-arrow about-arrow">
+                        <div class="swiper-button-prev">
+                            <img src="images/arrow-left.svg" alt="">
+                        </div>
+                        <div class="swiper-button-next">
+                            <img src="images/arrow-right.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <a class="about__btn button" href="#">
+                    SHOW ME MORE  
+                </a>
+
             </div>
         </div>
     </section>
