--- a/index.html
+++ b/index.html
@@ -157,53 +157,53 @@
                 <div class="about__slider swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                           <div class="about__item">
-                            <h4 class="about__item-title">
-                                DISCOVER GRIS DIOR
-                            </h4>
-                            <img src="images/slider-about/slide1.jpg" alt="">
-                           </div> 
-                        </div>
-                        <div class="swiper-slide">
-                           <div class="about__item">
-                            <h4 class="about__item-title">
-                                DARE TO RISK IT
-                            </h4>
-                            <img src="images/slider-about/slide2.jpg" alt="">
-                           </div> 
-                        </div>
-                        <div class="swiper-slide">
-                           <div class="about__item">
-                            <h4 class="about__item-title">
-                                FEEL THE FLAVOUR
-                            </h4>
-                            <img src="images/slider-about/slide3.jpg" alt="">
-                           </div> 
+                            <div class="about__item">
+                                <h4 class="about__item-title">
+                                    DISCOVER GRIS DIOR
+                                </h4>
+                                <img src="images/slider-about/slide1.jpg" alt="">
+                            </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="about__item">
-                             <h4 class="about__item-title">
-                                 DISCOVER GRIS DIOR
-                             </h4>
-                             <img src="images/slider-about/slide1.jpg" alt="">
-                            </div> 
-                         </div>
-                         <div class="swiper-slide">
+                                <h4 class="about__item-title">
+                                    DARE TO RISK IT
+                                </h4>
+                                <img src="images/slider-about/slide2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
                             <div class="about__item">
-                             <h4 class="about__item-title">
-                                 DARE TO RISK IT
-                             </h4>
-                             <img src="images/slider-about/slide2.jpg" alt="">
-                            </div> 
-                         </div>
-                         <div class="swiper-slide">
+                                <h4 class="about__item-title">
+                                    FEEL THE FLAVOUR
+                                </h4>
+                                <img src="images/slider-about/slide3.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
                             <div class="about__item">
-                             <h4 class="about__item-title">
-                                 FEEL THE FLAVOUR
-                             </h4>
-                             <img src="images/slider-about/slide3.jpg" alt="">
-                            </div> 
-                         </div>
+                                <h4 class="about__item-title">
+                                    DISCOVER GRIS DIOR
+                                </h4>
+                                <img src="images/slider-about/slide1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="about__item">
+                                <h4 class="about__item-title">
+                                    DARE TO RISK IT
+                                </h4>
+                                <img src="images/slider-about/slide2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="about__item">
+                                <h4 class="about__item-title">
+                                    FEEL THE FLAVOUR
+                                </h4>
+                                <img src="images/slider-about/slide3.jpg" alt="">
+                            </div>
+                        </div>
                     </div>
                     <div class="container-arrow about-arrow">
                         <div class="swiper-button-prev">
@@ -215,12 +215,143 @@
                     </div>
                 </div>
                 <a class="about__btn button" href="#">
-                    SHOW ME MORE  
+                    SHOW ME MORE
                 </a>
 
             </div>
         </div>
     </section>
+
+    <div class="accordeon">
+        <div class="container">
+            <div class="accordeon__inner">
+                <div class="accordeon__item">
+                    <div class="accordeon__triger">
+                        <div class="accordeon__triger-title">DESCRIPTION
+                        </div>
+                        <div class="accordeon__triger-text">
+                            Gris Dior is the olfactory expression of gray, the iconic color of the House of Dior that
+                            embodies the bold spirit of Christian Dior.
+                        </div>
+                    </div>
+                    <div class="accordeon__content">
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi enim voluptatem itaque sequi
+                            fugiat
+                            nam nemo iste impedit nostrum alias inventore, aspernatur praesentium eius libero? Vero,
+                            eius est.
+                            Fua, ut?
+                        </p>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi enim voluptatem itaque sequi
+                            fugiat
+                            nam nemo iste impedit nostrum alias inventore, aspernatur praesentium eius libero? Vero,
+                            eius est.
+                            Fua, ut?
+                        </p>
+                    </div>
+                </div>
+                <div class="accordeon__item">
+                    <div class="accordeon__triger">
+                        <div class="accordeon__triger-title">
+                            PERFUMER'S WORD
+                        </div>
+                        <div class="accordeon__triger-text">
+                            "What if the Dior gray were a fragrance? This emphatic gray is not merely a mix of black and
+                            white, but the result of a chromatic blend.”
+                        </div>
+                    </div>
+                    <div class="accordeon__content">
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi enim voluptatem itaque sequi
+                            fugiat
+                            nam nemo iste impedit nostrum alias inventore, aspernatur praesentium eius libero? Vero,
+                            eius est.
+                            Fua, ut?
+                        </p>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi enim voluptatem itaque sequi
+                            fugiat
+                            nam nemo iste impedit nostrum alias inventore, aspernatur praesentium eius libero? Vero,
+                            eius est.
+                            Fua, ut?
+                        </p>
+                    </div>
+                </div>
+                <div class="accordeon__item">
+                    <div class="accordeon__triger">
+                        <div class="accordeon__triger-title">
+                            APPLICATION TIPS
+                        </div>
+                        <div class="accordeon__triger-text">
+                            Spray Gris Dior on pulse points: neck and wrists.
+                        </div>
+                    </div>
+                    <div class="accordeon__content">
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi enim voluptatem itaque sequi
+                            fugiat
+                            nam nemo iste impedit nostrum alias inventore, aspernatur praesentium eius libero? Vero,
+                            eius est.
+                            Fua, ut?
+                        </p>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi enim voluptatem itaque sequi
+                            fugiat
+                            nam nemo iste impedit nostrum alias inventore, aspernatur praesentium eius libero? Vero,
+                            eius est.
+                            Fua, ut?
+                        </p>
+                    </div>
+                </div>
+                <div class="accordeon__item">
+                    <div class="accordeon__triger">
+                        <div class="accordeon__triger-title">
+                            INGREDIENTS
+                        </div>
+                    </div>
+                    <div class="accordeon__content">
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi enim voluptatem itaque sequi
+                            fugiat
+                            nam nemo iste impedit nostrum alias inventore, aspernatur praesentium eius libero? Vero,
+                            eius est.
+                            Fua, ut?
+                        </p>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi enim voluptatem itaque sequi
+                            fugiat
+                            nam nemo iste impedit nostrum alias inventore, aspernatur praesentium eius libero? Vero,
+                            eius est.
+                            Fua, ut?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="products">
+        <div class="container">
+            <div class="products__inner">
+                <p class="products__title">
+                    WHAT ELSE?
+                </p>
+                <div class="products__items">
+                    <div class="product__item">
+                        <p class="product__item-caption">01 INITIATE THE OLFACTORY RITUAL</p>
+                        <img class="products__item-img" src="images/products/product1.jpg" alt="Hand and Body Lotion">
+                        <p class="products__item-name"><span>GRIS DIOR</span>Hand and Body Lotion</p>
+                        <p class="products__item-price">87€</p>
+                    </div>
+                    <div class="product__item">
+                        <p class="product__item-caption">02 CONTINUE THE RITUA</p>
+                        <img class="products__item-img" src="images/products/product2.jpg" alt="Unisex Eau de Parfum ">
+                        <p class="products__item-name"><span>GRIS DIOR</span>Unisex Eau de Parfum </p>
+                        <p class="products__item-price">265€</p>
+                    </div>
+                    <div class="product__item">
+                        <p class="product__item-caption">03 ADD THE FINISHING TOUCH</p>
+                        <img class="products__item-img" src="images/products/product3.jpg" alt="Hair Perfume">
+                        <p class="products__item-name"><span>GRIS DIOR</span>Hair Perfume</p>
+                        <p class="products__item-price">102€</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
